--- a/NTwain.Net35/NTwain.Net35.csproj
+++ b/NTwain.Net35/NTwain.Net35.csproj
@@ -45,8 +45,14 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\NTwain\CapabilityControl.cs">
+      <Link>CapabilityControl.cs</Link>
+    </Compile>
     <Compile Include="..\NTwain\CapabilityReader.cs">
       <Link>CapabilityReader.cs</Link>
+    </Compile>
+    <Compile Include="..\NTwain\CapRoutines.cs">
+      <Link>CapRoutines.cs</Link>
     </Compile>
     <Compile Include="..\NTwain\DataSource.Caps.cs">
       <Link>DataSource.Caps.cs</Link>
