--- a/Tests/Tester.WPF/packages.config
+++ b/Tests/Tester.WPF/packages.config
@@ -2,6 +2,9 @@
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net40-Client" />
   <package id="CommonWin32" version="2.0.5.5" targetFramework="net40-Client" />
+  <package id="Microsoft.WindowsAPICodePack-Core" version="1.1.0.0" targetFramework="net40-Client" />
+  <package id="Microsoft.WindowsAPICodePack-Shell" version="1.1.0.0" targetFramework="net40-Client" />
   <package id="ModernWPF" version="1.2.9.1" targetFramework="net40-Client" />
+  <package id="ModernWPF.Mvvm" version="0.7.0" targetFramework="net40-Client" />
   <package id="MvvmLightLibs" version="5.0.2.0" targetFramework="net40-Client" />
 </packages>
