Added workaround for sources that don't support querysupport call.

--- a/NTwain.Net35/NTwain.Net35.csproj
+++ b/NTwain.Net35/NTwain.Net35.csproj
@@ -153,6 +153,9 @@
     <Compile Include="..\NTwain\Properties\VersionInfo.cs">
       <Link>Properties\VersionInfo.cs</Link>
     </Compile>
+    <Compile Include="..\NTwain\ProtocolVersions.cs">
+      <Link>ProtocolVersions.cs</Link>
+    </Compile>
     <Compile Include="..\NTwain\SourceEnableMode.cs">
       <Link>SourceEnableMode.cs</Link>
     </Compile>
