--- a/NTwain/NTwain.csproj
+++ b/NTwain/NTwain.csproj
@@ -50,6 +50,7 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xaml" />
     <Reference Include="WindowsBase" />
@@ -66,17 +67,21 @@
     <Compile Include="DataTransferredEventArgs.cs" />
     <Compile Include="IMemoryManager.cs" />
     <Compile Include="Internals\ICommittable.cs" />
+    <Compile Include="ImageTools.cs" />
     <Compile Include="Internals\InternalMessageLoopHook.cs" />
     <Compile Include="Internals\ITwainSessionInternal.cs" />
-    <Compile Include="Internals\MESSAGE.cs" />
+    <Compile Include="Interop\BITMAPINFO.cs" />
+    <Compile Include="Interop\BITMAPINFOHEADER.cs" />
+    <Compile Include="Interop\MESSAGE.cs" />
     <Compile Include="Internals\TransferLogic.cs" />
     <Compile Include="Internals\WindowsHook.cs" />
     <Compile Include="Internals\WrappedManualResetEvent.cs" />
+    <Compile Include="Interop\NativeMethods.cs" />
     <Compile Include="IPlatformInfo.cs" />
     <Compile Include="ITripletControl.cs" />
     <Compile Include="ITwainSession.cs" />
     <Compile Include="Internals\WinMemoryManager.cs" />
-    <Compile Include="Internals\UnsafeNativeMethods.cs" />
+    <Compile Include="Interop\UnsafeNativeMethods.cs" />
     <Compile Include="Internals\IWinMessageFilter.cs" />
     <Compile Include="ICapWrapper.cs" />
     <Compile Include="MessageLoopHooks.cs" />
