--- a/NTwain/NTwain.csproj
+++ b/NTwain/NTwain.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Data\TypeExtensions.cs" />
     <Compile Include="Data\TwainTypesExtended.cs" />
     <Compile Include="DeviceEventArgs.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="IDataSource.cs" />
     <Compile Include="ICapControl.cs" />
     <Compile Include="Internals\Extensions.cs" />
