Updated sample lib versions.

--- a/samples/Sample.WPF/app.config
+++ b/samples/Sample.WPF/app.config
@@ -7,6 +7,10 @@
         <assemblyIdentity name="Microsoft.Practices.ServiceLocation" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.2.0.0" newVersion="1.2.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="GalaSoft.MvvmLight" publicKeyToken="0e453835af4ee6ce" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.1.1.35051" newVersion="5.1.1.35051" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
