--- a/samples/Sample.WPF/packages.config
+++ b/samples/Sample.WPF/packages.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CommonServiceLocator" version="1.3" targetFramework="net40-Client" />
-  <package id="CommonWin32" version="2.0.5.5" targetFramework="net40-Client" />
-  <package id="Microsoft.WindowsAPICodePack-Core" version="1.1.0.2" targetFramework="net40-Client" />
-  <package id="Microsoft.WindowsAPICodePack-Shell" version="1.1.0.0" targetFramework="net40-Client" />
-  <package id="ModernWPF" version="1.2.10" targetFramework="net40-Client" />
-  <package id="ModernWPF.Mvvm" version="0.7.0" targetFramework="net40-Client" />
-  <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="net40-Client" />
+  <package id="CommonServiceLocator" version="1.3" targetFramework="net4-client" userInstalled="true" />
+  <package id="CommonWin32" version="2.0.5.6" targetFramework="net4-client" userInstalled="true" />
+  <package id="Microsoft.WindowsAPICodePack-Core" version="1.1.0.2" targetFramework="net4-client" userInstalled="true" />
+  <package id="Microsoft.WindowsAPICodePack-Shell" version="1.1.0.0" targetFramework="net4-client" userInstalled="true" />
+  <package id="ModernWPF" version="1.3.0" targetFramework="net4-client" userInstalled="true" />
+  <package id="ModernWPF.Mvvm" version="0.7.3" targetFramework="net4-client" userInstalled="true" />
+  <package id="MvvmLightLibs" version="5.1.1.0" targetFramework="net4-client" userInstalled="true" />
 </packages>
