--- a/samples/Sample.WPF/packages.config
+++ b/samples/Sample.WPF/packages.config
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="CommonServiceLocator" version="1.3" targetFramework="net4-client" />
-  <package id="CommonWin32" version="2.0.5.6" targetFramework="net4-client" />
   <package id="Microsoft.WindowsAPICodePack-Core" version="1.1.0.2" targetFramework="net4-client" />
   <package id="Microsoft.WindowsAPICodePack-Shell" version="1.1.0.0" targetFramework="net4-client" />
-  <package id="ModernWPF" version="1.3.9" targetFramework="net40-client" />
+  <package id="ModernWpf" version="2.0.0-alpha1" targetFramework="net40-client" />
+  <package id="ModernWpf.Core" version="2.0.0-alpha1" targetFramework="net40-client" />
   <package id="ModernWPF.Mvvm" version="0.7.5" targetFramework="net4-client" />
   <package id="MvvmLightLibs" version="5.2.0.0" targetFramework="net4-client" />
 </packages>
