#90 Interface for Capabilities

--- a/src/NTwain.Net35/NTwain.Net35.csproj
+++ b/src/NTwain.Net35/NTwain.Net35.csproj
@@ -79,6 +79,9 @@
     <Compile Include="..\NTwain\DeviceEventArgs.cs">
       <Link>DeviceEventArgs.cs</Link>
     </Compile>
+    <Compile Include="..\NTwain\ICapabilities.cs">
+      <Link>ICapabilities.cs</Link>
+    </Compile>
     <Compile Include="..\NTwain\ICapWrapper.cs">
       <Link>ICapWrapper.cs</Link>
     </Compile>
