--- a/src/NTwain/NTwain.csproj
+++ b/src/NTwain/NTwain.csproj
@@ -21,4 +21,23 @@
     <Version>4.0.0</Version>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Triplets\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Resources\MsgText.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>MsgText.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Resources\MsgText.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>MsgText.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
