Added source open/close methods and callback placeholder.

--- a/samples/NetCoreConsole/NetCoreConsole.csproj
+++ b/samples/NetCoreConsole/NetCoreConsole.csproj
@@ -5,6 +5,11 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <PlatformTarget>AnyCPU</PlatformTarget>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\..\src\NTwain\NTwain.csproj" />
   </ItemGroup>
