Added GetStatus() call.

--- a/samples/NetCoreConsole/NetCoreConsole.csproj
+++ b/samples/NetCoreConsole/NetCoreConsole.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
     <RootNamespace>ConsoleApp</RootNamespace>
+    <LangVersion>7.1</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
