Moved DAT classes under own namespace.

--- a/src/NTwain/NTwain.csproj
+++ b/src/NTwain/NTwain.csproj
@@ -37,4 +37,9 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Triplets\Image\" />
+    <Folder Include="Triplets\Audio\" />
+  </ItemGroup>
+
 </Project>
