--- a/src/NTwain/NTwain.nuspec
+++ b/src/NTwain/NTwain.nuspec
@@ -6,9 +6,9 @@
     <title>$title$</title>
     <authors>$author$</authors>
     <owners>$author$</owners>
-    <licenseUrl>https://bitbucket.org/soukoku/ntwain/src/15de55c6314f14ab2b1cb22f64397d9487c783d0/LICENSE.txt?at=master</licenseUrl>
-    <projectUrl>https://bitbucket.org/soukoku/ntwain</projectUrl>
-    <iconUrl>https://bytebucket.org/soukoku/ntwain/raw/6927ac18780cebbfa33ee7bc4864b9a6777c5fb6/Scanner-Icon.png</iconUrl>
+    <licenseUrl>https://raw.githubusercontent.com/soukoku/ntwain/v3/LICENSE.txt</licenseUrl>
+    <projectUrl>https://github.com/soukoku/ntwain/tree/v3</projectUrl>
+    <iconUrl>https://raw.githubusercontent.com/soukoku/ntwain/v3/Scanner-Icon.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <releaseNotes>This release supports TWAIN 2.3.</releaseNotes>
